objects/PMC_SS_IncentiveEarned__c.object
<CustomObject>
    <description>This Object will be used to update Accrual data from SAP via integration when Accrual is generated in SAP.</description>
    <fields>
        <fullName>PMC_SS_AccrualsCurrency__c</fullName>
        <description>Accrual currency (eg USD)</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Accruals Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AccrualsOpen__c</fullName>
        <description>Amount of Open Accruals  ( not posted)</description>
        <label>Accruals Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AccrualsReversed__c</fullName>
        <description>Amount of Accruals Reversed</description>
        <label>Accruals Reversed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_AccrualsTotal__c</fullName>
        <description>Total Amount of Accruals</description>
        <label>Accruals Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ConditionContractType__c</fullName>
        <description>Classification used to differentiate between different types of condition contracts Eg - Individual Rebate, Growth Rebate etc</description>
        <label>Condition Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ZR01</fullName>
                    <label>Individual Rebate</label>
                </value>
                <value>
                    <fullName>ZR02</fullName>
                    <label>Portfolio Rebate</label>
                </value>
                <value>
                    <fullName>ZR03</fullName>
                    <label>Growth Rebate</label>
                </value>
                <value>
                    <fullName>ZR05</fullName>
                    <label>Blended Rebate</label>
                </value>
                <value>
                    <fullName>ZR04</fullName>
                    <isActive>false</isActive>
                    <label>Ex Space Rebate</label>
                </value>
                <value>
                    <fullName>ZC02</fullName>
                    <isActive>false</isActive>
                    <label>Fixed Commission</label>
                </value>
                <value>
                    <fullName>Individual Accrual</fullName>
                    <isActive>false</isActive>
                    <label>Individual Accrual</label>
                </value>
                <value>
                    <fullName>ZC01</fullName>
                    <isActive>false</isActive>
                    <label>Volume Commission</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_ConditionType__c</fullName>
        <description>The Key that unquely identifies the accrual condition</description>
        <label>Condition Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ZRA1</fullName>
                    <label>Individual Accrual</label>
                </value>
                <value>
                    <fullName>ZRS1</fullName>
                    <label>Individual Rebate</label>
                </value>
                <value>
                    <fullName>ZRA2</fullName>
                    <label>Portfolio Accrual</label>
                </value>
                <value>
                    <fullName>ZRS2</fullName>
                    <label>Portfolio Rebate</label>
                </value>
                <value>
                    <fullName>ZRA3</fullName>
                    <label>Growth Accrual</label>
                </value>
                <value>
                    <fullName>ZRS3</fullName>
                    <label>Growth Rebate</label>
                </value>
                <value>
                    <fullName>ZRA6</fullName>
                    <label>Blended Accrual</label>
                </value>
                <value>
                    <fullName>ZRS6</fullName>
                    <label>Blended Rebate</label>
                </value>
                <value>
                    <fullName>ZCA1</fullName>
                    <isActive>false</isActive>
                    <label>Commission Accrual</label>
                </value>
                <value>
                    <fullName>ZCS1</fullName>
                    <isActive>false</isActive>
                    <label>Commission Rebate</label>
                </value>
                <value>
                    <fullName>ZRA4</fullName>
                    <isActive>false</isActive>
                    <label>Ex Sp Fix Accrual</label>
                </value>
                <value>
                    <fullName>ZRS4</fullName>
                    <isActive>false</isActive>
                    <label>Ex Sp Fix Rebate</label>
                </value>
                <value>
                    <fullName>ZRA5</fullName>
                    <isActive>false</isActive>
                    <label>Ex Sp Per Ton Accrual</label>
                </value>
                <value>
                    <fullName>ZRS5</fullName>
                    <isActive>false</isActive>
                    <label>Ex Sp Per Ton Rebate</label>
                </value>
                <value>
                    <fullName>ZCA2</fullName>
                    <isActive>false</isActive>
                    <label>Fix Comm Accrual</label>
                </value>
                <value>
                    <fullName>ZCS2</fullName>
                    <isActive>false</isActive>
                    <label>Fix Comm Rebate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sold-To / Customer SAP Number</description>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Incentives Earned</relationshipLabel>
        <relationshipName>PMC_SS_IncentivesEarnedAccount</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_ExternalSalesAgreementIdentifier__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Sales Agreement Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_SS_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SAP Material Code</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Incentives Earned</relationshipLabel>
        <relationshipName>PMC_SS_IncentivesEarnedProduct</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SAPConditionContractNumber__c</fullName>
        <description>Rebate Agreement SAP Document Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>SAP Condition Contract Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SalesAgreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If a Condition Contract is created via an SFDC Interface,  the number of the source document eg.SFDC Sales Agreement</description>
        <label>Sales Agreement</label>
        <referenceTo>SalesAgreement</referenceTo>
        <relationshipLabel>Incentives Earned</relationshipLabel>
        <relationshipName>PMC_SS_IncentivesEarnedSA</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Incentive Earned</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IE-{0000}</displayFormat>
        <label>Incentive Earned Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incentives Earned</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>